# CS307team12

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  d.ps1  test.json
Demo_of_engine/: CMakeLists.txt  Demo_of_engine.sln  Demo_of_engine.vcxproj  Demo_of_engine.vcxproj.filters  Engine_main.cpp  FileManager.cpp  README.md  imgui.ini
Demo_of_engine/Game VM/: Game VM.vcxproj  Game VM.vcxproj.filters  Game_VM_main.cpp  fragment.frag  vertex.vert
Demo_of_engine/editor/: CMakeLists.txt
Demo_of_engine/editor/src/: Editor_main.cpp
Demo_of_engine/gamevm/: CMakeLists.txt
Demo_of_engine/gamevm/src/: Game_VM_main.cpp  fragment.frag  vertex.vert
Demo_of_libraries/imgui/demo1/: demo1.sln  demo1.vcxproj
Demo_of_libraries/sdl_imgui_minimum/: README.md  Source.cpp  imgui.ini  sdl_imgui_minimum.sln  sdl_imgui_minimum.vcxproj  sdl_imgui_minimum.vcxproj.filters
core/: CMakeLists.txt  CoreMain.cpp  README.md
core/include/: Action.h  Button.h  Camera.h  Entity.h  Esignal.h  Font.h  FullSprite.h  Game.h  JsonParser.h  Logic.h  LogicManager.h  LoopingSprite.h  Map.h  MapPage.h  Menu.h  MenuEntry.h  MenuPage.h  Page.h  PageManager.h  PartialSprite.h  RenderTarget.h  Response.h  Script.h  Signal.h  SignalHandler.h  Sprint1.h  Sprint2.h  Sprite.h  SpriteHighlighter.h  SpriteManager.h  TextBox.h  Tile.h  Timer.h  logic.h  memoryPrinter.h  mySignal.h  script.h  testGame.h
core/src/: Action.cpp  Camera.cpp  Entity.cpp  Esignal.h  Font.cpp  FullSprite.cpp  Game.cpp  JsonParser.cpp  Logic.cpp  LogicManager.cpp  LoopingSprite.cpp  Map.cpp  MapPage.cpp  Menu.cpp  MenuEntry.cpp  MenuPage.cpp  Page.cpp  PageManager.cpp  PartialSprite.cpp  RenderTarget.cpp  Response.cpp  Script.cpp  Signal.cpp  SignalHandler.cpp  Sprint1.cpp  Sprint2.cpp  Sprite.cpp  Sprite2.cpp  SpriteManager.cpp  Tile.cpp  Timer.cpp  mySignal.cpp
core/test/: testGame.cpp
docs/: Fragment.mfj  gamefile_spec.json  mockupui.epgz
editor/: CMakeLists.txt  EditorMain.cpp
editor/include/: Editor.h  EditorWindow.h  EntityEditorWindow.h  GameWindow.h  HelpMarker.h  MainMenuBar.h  MapEditorWindow.h  MapWindow.h  ObjectTreeWindow.h  PageEditorWindow.h  ScriptEditorWindow.h  SplashWindow.h  SpriteEditorWindow.h  UndoRedo.h  editorWindows.h
editor/include/windows/: CameraEditor.h  EntityEditor.h  GameWindow.h  LogicEditor.h  MapEditor.h  MapWindow.h  MenuPageEditor.h  ObjectTree.h  PageEditor.h  ScriptEditor.h  SignalEditor.h  SplashWindow.h  SpriteEditor.h  SpriteSheetWindow.h  StateEditor.h  StatusEditor.h  StyleEditor.h  Window.h
editor/src/: Editor.cpp  EditorMain.cpp  EntityEditorWindow.cpp  GameWindow.cpp  MainMenuBar.cpp  MapEditorWindow.cpp  MapWindow.cpp  ObjectTreeWindow.cpp  PageEditorWindow.cpp  ScriptEditorWindow.cpp  SplashWindow.cpp  SpriteEditorWindow.cpp  UndoRedo.cpp
editor/src/windows/: CameraEditor.cpp  EntityEditor.cpp  GameWindow.cpp  LogicEditor.cpp  MapEditor.cpp  MapWindow.cpp  MenuPageEditor.cpp  ObjectTree.cpp  PageEditor.cpp  ScriptEditor.cpp  SignalEditor.cpp  SplashWindow.cpp  SpriteEditor.cpp  SpriteSheetWindow.cpp  StateEditor.cpp  StatusEditor.cpp  StyleEditor.cpp
enc_temp_folder/ea377382c5db8ebd4546666a26a5462/: Editor.cpp
engine/: CMakeLists.txt
engine/editor/: CMakeLists.txt
engine/editor/src/: Editor.cpp
engine/lib/glad/include/glad/: glad.h
engine/lib/glad/src/: glad.cpp
gamevm/: CMakeLists.txt  GameVMMain.cpp
gamevm/include/: GameVM.h  VMTool.h  squareDemo.h
gamevm/src/: GameVM.cpp  VMTool.cpp  squareDemo.cpp
gamevm/test/: testGameVM.cpp  test_square.cpp
gdata/: Experimental2.gdata  moveAround.gdata  moveAroundIncomplete.gdata  s1game.gdata  s2game.gdata  testvm.gdata
log/: Larry'sCHANGELOG.md  larry_s3.md
practice/Demo_of_ImGui/: CMakeLists.txt
practice/Demo_of_ImGui_Docking/: CMakeLists.txt  main.cpp
practice/Demo_of_engine/: CMakeLists.txt  README.md
practice/Demo_of_engine/core/: CMakeLists.txt
practice/Demo_of_engine/editor/: CMakeLists.txt
practice/Demo_of_engine/editor/src/: Editor_main.cpp  fragment.frag  vertex.vert
practice/Demo_of_engine/gamevm/: CMakeLists.txt
practice/Demo_of_libraries/: README.md
practice/Demo_of_libraries/sdl_imgui_minimum/: .editorconfig  README.md  sdl_imgui_minimum.vcxproj.filters
practice/Test_of_Cpp/: CMakeLists.txt  main.cpp
resource/: parchment.rc
temp/: FileManager.h
test/: CMakeLists.txt
unit_test/: CMakeLists.txt
unit_test/include/: TestCore.h  TestEditor.h  TestVM.h  test_core.h
unit_test/src/: TestCore.cpp  TestEditor.cpp  TestVM.cpp  test_core.cpp
